# libsaxs

./: CMakeLists.txt  README.md
CMakeModules/: Findlibmol.cmake
example/: atoms.0.0.6.prm  pdb_formfactor_mapping.prm
src/: form_factor_table.c  form_factor_table.h  ftcluster.c  ftcluster.h  histogram.c  histogram.h  radial_distribution.c  radial_distribution.h  rgyration.c  rgyration.h  saxs_atom.c  saxs_atom.h  saxs_common.h  saxs_config.h  saxs_generate.c  saxs_lib.h  saxs_profile.c  saxs_profile.h  saxs_score.c  saxs_score.h  saxs_utils.c  saxs_utils.h
tools/: CMakeLists.txt  gen_saxs_profile.c  pdb_chi_score.c
